--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
+    "child_process": "^1.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
@@ -36,11 +38,11 @@
     "fs-extra": "^10.0.0",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.5",
+    "node-fetch": "^2.6.1"
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "yt-search": "^2.10.0",
-    "ytdl-core": "^4.9.0"
+    "yt-search": "^2.10.0"
   }
 }
