--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "express",
     "restapi"
   ],
-  "author": "zekais",
+  "author": "ianvanh",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fawwaz37/nodejs-restapi.git"
+    "url": "https://github.com/DrkBotBase/dylan-rest.git"
   },
   "bugs": {
-    "url": "https://github.com/fawwaz37/nodejs-restapi/issues"
+    "url": "https://github.com/DrkBotBase/dylan-rest/issues"
   },
-  "homepage": "https://github.com/fawwaz37/nodejs-restapi",
+  "homepage": "https://github.com/DrkBotBase/dylan-rest",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
