--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "fs-extra": "^10.0.0",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.5",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
